# galileo-sdr-sim

./: .gitignore  CMakeLists.txt  README.md  generate_frame.cpp  gnss-sdr_Galileo_E1_ishort.conf  usrp_galileo.cpp
galileo-gnss-monitoring/galileo-config/: exec_gnsssdr.sh  galileo.conf  galileo_usrp.conf
galileo-gnss-monitoring/galileo-config/exec/: galileo_2.conf  galileo_usrp.conf
galileo-gnss-monitoring/monitoring-client/: CMakeLists.txt  gnss_synchro.proto  gnss_synchro_udp_source.cc  gnss_synchro_udp_source.h  gnss_synchro_udp_source_orig.cc  main.cc  monitoring-client
galileo-gnss-monitoring/monitoring-client/versions/: gnss_synchro_udp_source_v1_tested_may6.cc
galileo-gnss-monitoring/nav_listener/: nav_msg_udp_listener.cc  nav_msg_udp_listener.h
include/: constants.h  galileo-sdr.cpp  galileo-sdr.h  ionoTables.h  nav_msg_data.cpp  socket.h  structures.h  usrp_galileo.h
rinex_files/: 20feb2022.rnx
src/: channel.cpp  datatypes.cpp  debug.cpp  fifo.cpp  gal-sig.cpp  galileo-sdr.cpp  geodesy.cpp  gnss-time.cpp  inav-msg.cpp  iono.cpp  main.cpp  rinex.cpp  usrp.cpp
tv/11_DEC_2020_GST_08_00_01/: 1.csv  11.csv  12.csv  19.csv  2.csv  20.csv  21.csv  24.csv  25.csv  26.csv  27.csv  3.csv  31.csv  33.csv  36.csv  4.csv  5.csv  7.csv  8.csv  9.csv
tv/12_DEC_2020_GST_08_00_01/: 1.csv  11.csv  12.csv  13.csv  15.csv  19.csv  2.csv  20.csv  21.csv  24.csv  25.csv  26.csv  27.csv  3.csv  30.csv  31.csv  33.csv  4.csv  5.csv  7.csv  8.csv  9.csv
tv/12_JAN_2021_GST_10_00_01/: 1.csv  11.csv  12.csv  13.csv  15.csv  19.csv  2.csv  20.csv  21.csv  24.csv  25.csv  26.csv  27.csv  3.csv  30.csv  31.csv  33.csv  4.csv  5.csv  7.csv  8.csv  9.csv
tv/13_DEC_2020_GST_09_00_01/: 1.csv  11.csv  12.csv  13.csv  15.csv  19.csv  2.csv  20.csv  21.csv  24.csv  25.csv  26.csv  27.csv  3.csv  30.csv  31.csv  33.csv  36.csv  4.csv  5.csv  7.csv  8.csv  9.csv
tv/13_JAN_2021_GST_10_00_01/: 1.csv  11.csv  12.csv  13.csv  15.csv  19.csv  2.csv  20.csv  21.csv  24.csv  25.csv  26.csv  27.csv  3.csv  30.csv  31.csv  36.csv  4.csv  5.csv  7.csv  8.csv  9.csv
tv/15_DEC_2020_GST_08_00_01/: 1.csv  11.csv  12.csv  13.csv  19.csv  2.csv  20.csv  21.csv  24.csv  25.csv  26.csv  27.csv  3.csv  30.csv  31.csv  33.csv  36.csv  4.csv  5.csv  7.csv  8.csv  9.csv
tv/15_DEC_2020_GST_10_00_01/: 1.csv  11.csv  12.csv  13.csv  15.csv  19.csv  2.csv  20.csv  21.csv  24.csv  25.csv  26.csv  27.csv  3.csv  30.csv  31.csv  33.csv  36.csv  4.csv  5.csv  7.csv  8.csv  9.csv
tv/16_DEC_2020_GST_08_00_01/: 1.csv  12.csv  13.csv  15.csv  19.csv  2.csv  20.csv  21.csv  24.csv  25.csv  26.csv  27.csv  3.csv  30.csv  33.csv  36.csv  4.csv  5.csv  7.csv  8.csv  9.csv
tv/17_JAN_2021_GST_08_00_01/: 1.csv  11.csv  12.csv  13.csv  15.csv  19.csv  2.csv  20.csv  21.csv  24.csv  25.csv  26.csv  27.csv  3.csv  30.csv  31.csv  33.csv  36.csv  4.csv  5.csv  7.csv  8.csv  9.csv
tv/20_FEB_2022_GST_08_00_01/: 1.csv  10.csv  11.csv  12.csv  13.csv  15.csv  19.csv  2.csv  20.csv  21.csv  24.csv  25.csv  26.csv  27.csv  3.csv  30.csv  31.csv  33.csv  34.csv  36.csv  4.csv  5.csv  7.csv  9.csv
tv/23_FEB_2021_GST_09_00_31/: 1.csv  11.csv  12.csv  13.csv  15.csv  19.csv  2.csv  20.csv  21.csv  24.csv  25.csv  26.csv  27.csv  3.csv  30.csv  31.csv  33.csv  36.csv  4.csv  5.csv  7.csv  8.csv  9.csv
tv/25_JAN_2021_GST_08_00_01/: 1.csv  11.csv  12.csv  13.csv  15.csv  19.csv  2.csv  20.csv  21.csv  24.csv  25.csv  26.csv  27.csv  3.csv  30.csv  31.csv  33.csv  36.csv  4.csv  5.csv  7.csv  8.csv  9.csv
tv/28_FEB_2021_GST_08_00_01/: 1.csv  11.csv  12.csv  13.csv  15.csv  19.csv  2.csv  20.csv  24.csv  25.csv  26.csv  27.csv  3.csv  30.csv  31.csv  33.csv  36.csv  4.csv  5.csv  7.csv  8.csv  9.csv
utils/: convert_telem.py  coord_update_cli.py  generate_frame.cpp  rinex_reader.cpp  sat_pos.py
